--- a/index.css
+++ b/index.css
@@ -1,3 +1,13 @@
-body {
+*, *::before, *::after {
+    box-sizing: inherit;
+    border: 1px solid grey;
+}
+
+body, html {
+    padding: 0;
     margin: 0;
-} 
+}
+
+html {
+    box-sizing: border-box;
+}
