--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 *, *::before, *::after {
     box-sizing: inherit;
-    border: 1px solid grey;
+    /* border: 1px solid grey; */
+    /* padding: 5px; */
 }
 
 body, html {
@@ -12,25 +13,414 @@ html {
     box-sizing: border-box;
 }
 
+:root {
+    /* Primary colour */
+    --darkest: #55301F;
+    --light: #C8A899;
+    --vivid: #FF8A00;
+    --lightest: #FFFAF7;
+    --bg: #ffffff;
+    /* Accent colour */
+    --accent-darkest: #006277;
+    --accent-vivid: #27FFCB;
+    --accent-light: #97c9d4;
+    --accent-lightest: #F6FDFF;
+    /* Border radius */
+    --int-br-small: 5px;
+    --int-br: 10px;
+    --ext-br: 15px;
+    --crcl-br: 100px;
+    /* Main container shadow styles */
+    --shadow-color: 0deg 0% 60%;
+    --shadow-color-modal: 19deg 47% 20%;
+    --shadow-elevation-high:
+    0px 0.8px 0.6px hsl(var(--shadow-color) / 0.75),
+    0px 1px 0.8px -0.6px hsl(var(--shadow-color) / 0.67),
+    0px 2.1px 1.6px -1.1px hsl(var(--shadow-color) / 0.6),
+    0.1px 5.1px 3.8px -1.7px hsl(var(--shadow-color) / 0.52),
+    0.1px 10.9px 8.2px -2.2px hsl(var(--shadow-color) / 0.45),
+    0.3px 20.5px 15.4px -2.8px hsl(var(--shadow-color) / 0.37),
+    0.5px 34.9px 26.2px -3.3px hsl(var(--shadow-color) / 0.3),
+    0.7px 54.9px 41.2px -3.9px hsl(var(--shadow-color) / 0.22),
+    1.1px 81.5px 61.1px -4.4px hsl(var(--shadow-color) / 0.15),
+    1.5px 115.7px 86.8px -5px hsl(var(--shadow-color) / 0.07);
+    --shadow-modal:
+    0px 0.8px 0.6px hsl(var(--shadow-color-modal) / 0.30),
+    0px 1px 0.8px -0.6px hsl(var(--shadow-color-modal) / 0.30),
+    0px 2.1px 1.6px -1.1px hsl(var(--shadow-color-modal) / 0.28),
+    0.1px 5.1px 3.8px -1.7px hsl(var(--shadow-color-modal) / 0.25),
+    0.1px 10.9px 8.2px -2.2px hsl(var(--shadow-color-modal) / 0.23),
+    0.3px 20.5px 15.4px -2.8px hsl(var(--shadow-color-modal) / 0.22),
+    0.5px 34.9px 26.2px -3.3px hsl(var(--shadow-color-modal) / 0.17),
+    0.7px 54.9px 41.2px -3.9px hsl(var(--shadow-color-modal) / 0.13),
+    1.1px 81.5px 61.1px -4.4px hsl(var(--shadow-color-modal) / 0.10),
+    1.5px 115.7px 86.8px -5px hsl(var(--shadow-color-modal) / 0.07);
+}
+
+body {
+    font-family: 'Merriweather Sans', sans-serif;
+    color: var(--darkest)
+}
+
+form > *,
+button {
+    font-family: inherit;
+    color: var(--darkest);
+}
+
+button {
+    border: none;
+    cursor: pointer;
+}
+
 h1,
 h2,
+h3,
 p,
 ul,
-li {
+li,
+a {
     margin: 0;
     padding: 0;
 }
 
+a {
+    color: var(--darkest);
+    text-decoration: underline;
+}
+
+h1 {
+    font-family: 'Crete Round', serif;
+    font-size: 64px;
+    font-weight: 400;
+    line-height: 0.7;
+    margin: 22px 0 25px 0;
+}
+
+i {
+    pointer-events: none;
+}
+
+.p-tagline {
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+.p-header-detail {
+    margin-bottom: 26px
+}
+
+.p-header-detail {
+    font-size: 18px;
+}
+
+/* Page element styles */
 .div-container {
+    background-color: var(--lightest);
     width: 600px;
+    border-radius: var(--ext-br);
+    padding: 25px;
     margin: 50px auto;
+    box-shadow: var(--shadow-elevation-high);
+}
+
+.img-header {
+    display: block;
+    width: 100%;
+}
+
+.p-header-detail {
+    font-size: 20px;
+}
+
+.div-order-type {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 26px;
+}
+
+/* Button styles */
+.btn-order-type {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    background-color: var(--light);
+    font-size: 24px;
+    font-weight: 400;
+    border-radius: var(--int-br);
+    padding: 20px 0;
+    flex-grow: 1;
+    color: var(--lightest)
+}
+
+/* Menu filter styles */
+.ul-menu-filter {
+    list-style-type: none;
+    display: flex;
+    gap: 20px;
+    padding: 0;
+    margin-bottom: 20px;
+}
+
+.li-menu-filter {
+    flex-grow: 1;
+}
+
+.btn-filter-category {
+    background-color: var(--light);
+    color: var(--lightest);
+    font-size: 20px;
+    border-radius: var(--int-br-small);
+    width: 100%;
+    padding: 8px 0;
+}
+
+/* Menu list styles */
+.ul-menu {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+}
+
+.li-menu-item {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 0;
+}
+
+.div-menu-item-divider {
+    border: 1px solid var(--light);
+    width: 94%;
+    margin: auto;
+}
+
+.img-menu-item {
+    width: 100px;
+    aspect-ratio: 1/1;
+}
+
+.li-menu-item div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 12px;
+    width: 100%;
+    padding: 0 20px;
+}
+
+.span-menu-item-name {
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.span-menu-item-ingredients,
+.span-menu-item-price {
+    color: var(--darkest);
+}
+
+.btn-selected {
+    background-color: var(--darkest);
+}
+
+.btn-add-item,
+.btn-remove-item {
+    border-radius: 50px;
+    padding: 13px;
+    align-self: center;
+}
+
+.btn-add-item {
+    background-color: var(--darkest);
+    color: var(--lightest);
+}
+
+.btn-remove-item {
+    background-color: var(--accent-darkest);
+    color: var(--accent-lightest);
+}
+
+/* View Order button style */
+.btn-view-order {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--accent-darkest);
+    color: var(--accent-lightest);
+    font-family: 'Crete Round', serif;
+    font-size: 36px;
+    border-radius: var(--int-br);
+    width: 100%;
+    position: relative;
+    padding: 25px 20px;
+}
+
+.span-item-count,
+.span-basket-total {
+    font-family: 'Merriweather Sans', sans-serif;
+}
+
+.span-basket-total {
+    display: block;
+    text-align: right;
+    width: 15%;
+    font-size: 20px;
+}
+
+.span-item-count {
+    background-color: var(--accent-vivid);
+    color: var(--accent-darkest);
+    font-size: 22px;
+    font-weight: 700;
+    width: 36px;
+    height: 36px;
+    padding-top: 6px;
+    /* line-height: 1.7; */
+    border-radius: 50px;
+    position: absolute;
+    top: 20px;
+    left: 45px;
+}
+
+/* Footer styles */
+.ul-footer-nav {
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+    margin: 20px 0 0 0;
+    padding: 0;
+}
+
+.li-footer-nav button {
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.li-footer-nav span {
+    font-size: 14px;
+    font-weight: 700;
+    padding: 5px;
+}
+
+.img-account {
+    width: 48px;
+    aspect-ratio: 1/1;
+    border-radius: var(--crcl-br);
+    border: 4px solid var(--darkest);
+}
+
+/* Modal Styles */
+.modal {
+    background-color: var(--accent-lightest);
+    border: none;
+    border-radius: var(--int-br);
+    width: 510px;
+    height: 975px;
+    margin-top: 95px;
+    padding: 25px;
+    box-shadow: var(--shadow-modal);
+}
+
+.modal-inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    height: 100%;    
+    /* border: 5px solid pink;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 */
+}
+
+.modal-title {
+    color: var(--accent-darkest);
+    font-family: 'Crete Round', serif;
+    font-size: 48px;
+    width: 100%;
+    text-align: center;
+    margin: 0 0 25px 0;
+}
+
+.div-modal-divider {
+    border: 1px solid var(--accent-light);
+    width: 94%;
+    margin: auto;
+}
+
+.btn-modal-close,
+.btn-modal-back {
+    background-color: var(--accent-darkest);
+    color: var(--accent-lightest);
+    border-radius: var(--crcl-br);
+    padding: 7px;
+}
+
+.btn-modal-close {
+    position: absolute;
+    top: 25px;
+    right: 25px;
+}
+
+.btn-modal-back {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+}
+
+.btn-modal-main {
+    background-color: var(--darkest);
+    font-family: 'Crete Round', serif;
+    font-size: 36px;
+    color: var(--lightest);
+    border-radius: var(--int-br);
+    padding: 30px 0;
+    /* margin-top: auto; */
+}
+
+.basket-name {
+    color: var(--accent-darkest);
+}
+
+.basket-ingredients,
+.basket-price {
+    color: var(--accent-light)
+}
+
+.div-modal-footer {
+    width: 100%;
+    margin-top: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.div-modal-total {
+    font-size: 24px;
+    font-weight: 700;
+    color: var(--accent-darkest);
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.btn-modal-main,
+.div-modal-total {
+    margin-top: auto;
 }
 
 /* Temporary styles */
-button:active {
-    transform: scale(0.9);
+button:hover {
+    transform: scale(1.04)
 }
 
-.section-menu-filter {
-    display: flex;
+button:active {
+    transform: scale(1.0);
+}
+
+button:disabled {
+    opacity: 0.5;
+    pointer-events: none;
 }
