--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@ html {
 
 :root {
     --white: #FFFFFF;
+    --warning: #ff3700;
     /* Primary colour */
     --darkest: #55301F;
     --light: #C8A899;
@@ -489,6 +490,10 @@ i {
     margin: 0;
 }
 
+.warning {
+    box-shadow: 0 0 1px 1px var(--warning);
+}
+
 .modal-title + .d-divider {
     margin: 25px auto 0 auto;
 }
@@ -523,10 +528,14 @@ i {
     margin-top: 25px;
 }
 
-.ul-discounts {
-    list-style0
+.ul-my-orders {
+    list-style-type: none;
     /* margin: 0; */
     padding: 0;
+}
+
+.ul-my-orders li {
+    margin: 25px 0;
 }
 
 /* Temporary styles */
