--- a/index.css
+++ b/index.css
@@ -16,28 +16,25 @@ html {
 :root {
     --white: #FFFFFF;
     --warning: #ff3700;
-    /* Primary colour */
-    --darkest: #55301F;
-    --light: #C8A899;
-    --vivid: #A10702;
-    --lightest: #FFFAF7;
+    --star: #FFEC51;
     --bg: #ffffff;
+    /* Primary colour */
+    --darkest: #55423d;
+    --light: #E1D4D0;
+    --vivid: #ff5900;
+    --lightest: #fffffe;
     /* Accent colour */
-    --accent-darkest: #006277;
-    --accent-vivid: #27FFCB;
-    --accent-light: #97c9d4;
-    --accent-lightest: #F6FDFF;
-    /* Alt accent color */
-    --accent-darkest: #006277;
-    --accent-vivid: #27FFCB;
-    --accent-light: #97c9d4;
-    --accent-lightest: #F6FDFF;
-    /* Border radius */
+    --accent-darkest: #232946;
+    --accent-vivid: #00FBFF;
+    --accent-light: #b8c1ec;
+    --accent-lightest: #fffffe;
+    /* Border radius options */
     --int-br-small: 5px;
     --int-br: 10px;
     --ext-br: 15px;
     --crcl-br: 100px;
-    /* Main container shadow styles */
+    /* Main container shadow styles, a bit overkill 
+    but I think they look nice :-) */
     --shadow-color: 0deg 0% 60%;
     --shadow-color-modal: 19deg 47% 20%;
     --shadow-elevation-high:
@@ -81,30 +78,6 @@ button {
     cursor: pointer;
 }
 
-h1,
-h2,
-h3,
-p,
-ul,
-li,
-a {
-    margin: 0;
-    padding: 0;
-}
-
-a {
-    color: var(--darkest);
-    text-decoration: underline;
-}
-
-h1 {
-    font-family: 'Crete Round', serif;
-    font-size: 64px;
-    font-weight: 400;
-    line-height: 0.7;
-    margin: 22px 0 25px 0;
-}
-
 i,
 button > *,
 button:disabled,
@@ -112,32 +85,122 @@ button:disabled,
     pointer-events: none;
 }
 
-.p-tagline {
-    font-size: 24px;
-    margin-bottom: 20px;
+button:hover {
+    transform: scale(1.04);
 }
 
-.p-header-detail {
-    margin-bottom: 26px
+button:active {
+    transform: scale(1.0);
 }
 
-.p-header-detail {
-    font-size: 18px;
+button:disabled {
+    opacity: 0.5;
+}
+
+/* Hide labels */
+label {
+    position: absolute;
+    clip: rect(1px, 1px, 1px, 1px);
+    padding: 0;
+    border: 0;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+}
+
+h1, h2, h3, h4, p, ul, li, a {
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    color: var(--lightest);
+}
+
+a:hover {
+    color: var(--light)
+}
+
+
+h1 {
+    font-family: 'Crete Round', serif;
+    color: var(--lightest);
+    font-size: 64px;
+    font-weight: 400;
+    line-height: 0.7;
 }
 
 /* Page element styles */
-.div-container {
-    background-color: var(--lightest);
+
+.main,
+.header,
+.sec-menu-controls,
+.div-outer-container {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.header,
+.div-outer-container {
+    align-items: center;
+}
+
+.div-outer-container {
+    background-color: var(--darkest);
+    background-image: url('assets/beans.png');
     width: 600px;
     border-radius: var(--ext-br);
-    padding: 25px;
-    margin: 50px auto;
     box-shadow: var(--shadow-elevation-high);
+    padding-top: 25px;
+    margin: 50px auto;
+}
+
+.div-inner-container {
+    background-color: var(--lightest);
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 25px;
+    border-radius: var(--ext-br);
+    padding: 25px 25px 15px 25px;
+}
+
+.h1-title {
+    margin-top: -10px;
+    letter-spacing: 1.5;
+}
+
+.img-logo {
+    width: 100px;
 }
 
 .img-header {
     display: block;
     width: 100%;
+}
+
+.img-item {
+    width: 100px;
+    aspect-ratio: 1/1;
+    align-self: center;
+}
+
+.img-account {
+    width: 48px;
+    aspect-ratio: 1/1;
+    border-radius: var(--crcl-br);
+    border: 5px solid;
+}
+
+.p-tagline,
+.p-header-detail {
+    color: var(--lightest);
+}
+
+.p-tagline {
+    margin-top: 7px;
+    font-size: 24px;
 }
 
 .p-header-detail {
@@ -149,7 +212,6 @@ button:disabled,
     justify-content: center;
     align-items: center;
     gap: 20px;
-    margin-bottom: 26px;
 }
 
 /* Button styles */
@@ -167,39 +229,155 @@ button:disabled,
     color: var(--lightest)
 }
 
-/* Menu filter styles */
-.ul-menu-filter {
-    list-style-type: none;
+.btn-add,
+.btn-modal-main,
+.div-order-type .selected,
+.li-menu-filter .selected {
+    background-color: var(--darkest);
+}
+
+/* List styles (mostly) */
+.ul-menu-filter,
+.ul-menu,
+.ul-order,
+.ul-footer-nav,
+.ul-order-history,
+.ul-discounts,
+.ul-star-rating {
     display: flex;
-    gap: 20px;
+    list-style-type: none;
+}
+
+.ul-menu,
+.ul-order,
+.ul-order-history,
+.ul-discounts,
+.ul-order-confirmation li:last-of-type {
+    flex-direction: column;
+}
+
+.ul-menu-filter,
+.ul-order-history,
+.ul-discounts,
+.ul-star-rating {
+    gap: 25px;
+}
+
+.ul-menu-filter,
+.ul-order-history,
+.ul-discounts,
+.ul-footer-nav {
     padding: 0;
-    margin-bottom: 20px;
+}
+
+.ul-order-history,
+.ul-discounts {
+    width: 100%;
+    margin-bottom: auto;
+}
+
+.ul-menu {
+    margin: 6px auto;
+}
+
+.ul-footer-nav {
+    justify-content: space-between;
+}
+
+.ul-star-rating {
+    background: var(--accent-darkest);
+    border-radius: var(--int-br);
+    align-self: center;
+    font-size: 38px;
+    padding: 25px;
+}
+
+.ul-discounts {
+    text-align: center;
+    font-size: 36px;
+}
+
+.ul-order-confirmation li:last-of-type {
+    display: flex;
+    gap: 25px;
+}
+
+.li-menu-item,
+.li-order-history,
+.li-footer-nav button,
+.li-menu-item div {
+    display: flex;
+}
+
+.li-menu-item,
+.li-footer-nav button {
+    justify-content: space-between;
+}
+
+.li-order-history,
+.li-menu-item div,
+.li-footer-nav button {
+    flex-direction: column;
+}
+
+.li-menu-item {
+    padding: 20px 0;
+}
+
+.li-menu-item:first-of-type {
+    padding-top: 0;
+}
+
+.li-menu-item div {
+    justify-content: center;
+    gap: 12px;
+    width: 100%;
+    padding: 0 20px;
 }
 
 .li-menu-filter {
     flex-grow: 1;
 }
 
-.btn-filter-category {
-    background-color: var(--light);
-    color: var(--lightest);
-    font-size: 20px;
-    border-radius: var(--int-br-small);
-    width: 100%;
-    padding: 8px 0;
+.li-footer-nav button {
+    background-color: transparent;
+    align-items: center;
+    border-bottom: 5px solid transparent;
 }
 
-/* Menu list styles */
-.ul-menu, .ul-order {
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
+.li-footer-nav button:hover,
+.li-footer-nav button.selected {
+    color: var(--accent-darkest);
+    border-bottom: 5px solid var(--accent-darkest);
 }
 
-.li-menu-item {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px 0;
+.li-footer-nav span {
+    font-size: 14px;
+    font-weight: 700;
+    padding: 10px;
+}
+
+.li-order-history {
+    gap: 15px;
+}
+
+.li-order-history p:last-of-type {
+    font-size: 18px;
+}
+
+.li-star {
+    color: var(--star);
+    opacity: 0.4;
+}
+
+.li-star.solid {
+    color: var(--star);
+    opacity: 1;
+}
+
+.li-star:hover {
+    opacity: 1;
+    cursor: pointer;
 }
 
  .div-divider {
@@ -216,20 +394,6 @@ button:disabled,
     border-color: var(--accent-light);
 }
 
-.img-item {
-    width: 100px;
-    aspect-ratio: 1/1;
-}
-
-.li-menu-item div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 12px;
-    width: 100%;
-    padding: 0 20px;
-}
-
 .spn-item-name {
     font-size: 24px;
     font-weight: 700;
@@ -240,19 +404,13 @@ button:disabled,
     opacity: 0.75;
 }
 
-.btn-selected {
-    background-color: var(--darkest);
-}
-
 .btn-add,
 .btn-remove {
     border-radius: 100%;
     align-self: center;
-    
 }
 
 .btn-add {
-    background-color: var(--darkest);
     color: var(--lightest);
     padding: 14px;
 }
@@ -263,7 +421,15 @@ button:disabled,
     padding: 15px 14px 13px 14px;
 }
 
-/* View Order button style */
+.btn-filter-category {
+    background-color: var(--light);
+    color: var(--lightest);
+    font-size: 20px;
+    border-radius: var(--int-br-small);
+    width: 100%;
+    padding: 8px 0;
+}
+
 .btn-view-basket {
     display: flex;
     align-items: center;
@@ -305,43 +471,6 @@ button:disabled,
     left: 45px;
 }
 
-/* Footer styles */
-.ul-footer-nav {
-    display: flex;
-    justify-content: space-between;
-    list-style-type: none;
-    margin: 20px 0 0 0;
-    padding: 0;
-}
-
-.li-footer-nav button {
-    background-color: transparent;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.li-footer-nav .selected {
-    /* border-radius: var(--ißnt-br); */
-    color: var(--accent-darkest);
-    border-bottom: 5px solid var(--accent-darkest);
-}
-
-.li-footer-nav span {
-    font-size: 14px;
-    font-weight: 700;
-    padding: 10px;
-}
-
-.img-account {
-    width: 48px;
-    aspect-ratio: 1/1;
-    border-radius: var(--crcl-br);
-    border: 4px solid var(--darkest);
-}
-
-/* Modal Styles */
 .modal {
     color: var(--accent-darkest);
     font-size: 22px;
@@ -361,11 +490,16 @@ button:disabled,
     left: 0;
 }
 
-.modal-inner {
+.modal-inner,
+.modal-inner header {
     display: flex;
     flex-direction: column;
+    gap: 25px;
+}
+
+.modal-inner {
     justify-content: start;
-    height: 100%;    
+    height: 100%;
 }
 
 .modal-title {
@@ -376,19 +510,19 @@ button:disabled,
     margin: -3px 0 0 0;
 }
 
-.el-thin-scrollbar {
-    margin: 0 -18px 25px 0;
+.overflow-thin-scrollbar {
+    margin-right: -18px;
     padding: 0 11px 0 0;
     height: 100%;
     overflow-y: scroll;
 }
 
-.el-thin-scrollbar::-webkit-scrollbar {
+.overflow-thin-scrollbar::-webkit-scrollbar {
     background-color: transparent;
     width: 7px;
 }
 
-.el-thin-scrollbar::-webkit-scrollbar-thumb {
+.overflow-thin-scrollbar::-webkit-scrollbar-thumb {
     background-color: var(--accent-darkest);
     opacity: 0.6;
     border-radius: 5px;
@@ -424,58 +558,60 @@ button:disabled,
 }
 
 .btn-modal-main {
-    background-color: var(--darkest);
     font-family: 'Crete Round', serif;
     font-size: 36px;
     color: var(--lightest);
     border-radius: var(--int-br);
     padding: 30px 0;
-    margin-top: 25px;
 }
 
-.div-modal-footer {
+.modal-inner footer {
     width: 100%;
     margin-top: auto;
     display: flex;
     flex-direction: column;
+    gap: 25px;
 }
 
 .div-space-between {
     font-size: 24px;
     font-weight: 700;
-    /* color: var(--accent-darkest); */
     display: flex;
     justify-content: space-between;
-    /* margin-bottom: 20px; */
 }
 
-/* .btn-modal-main,
-.d-modal-space-between {
-    margin-top: auto;
-} */
+/* Card details input form stuff */
+.form-card-detail * {
+    font-weight: 300;
+}
 
-/* Credit card input styling */
-.f-card-det {
+.form-card-detail *:focus,
+.ipt-discount:focus {
+    outline: none;
+    box-shadow: 0 0 1px 1px var(--accent-vivid);
+}
+
+.form-card-detail {
     display: flex;
     font-size: 24px;
     flex-direction: column;
     gap: 20px;
-    margin-top: 25px;
 }
 
-.d-card-det-exp {
+.div-card-detail-2-column {
     display: flex;
     align-items: center;
     gap: 20px;
+    
 }
 
-.s-card {
+.sel-card {
     flex-grow: 1;
     width: 50%;
 }
 
-.i-card,
-.s-card,
+.ipt-card,
+.sel-card,
 .ipt-discount {
     background-color: var(--white);
     padding: 18px 13px;
@@ -484,7 +620,7 @@ button:disabled,
     border: 1px solid var(--accent-light);
 }
 
-.s-card {
+.sel-card {
     background: url('assets/arrow.png');
     background-repeat: no-repeat;   
     background-size: 5%;
@@ -494,12 +630,12 @@ button:disabled,
     appearance: none;
 }
 
-.i-card::placeholder,
+.ipt-card::placeholder,
 .ipt-discount::placeholder {
     color: var(--accent-light);
 }
 
-.i-card-ccv {
+.ipt-card-ccv {
     width: 50%;
 }
 
@@ -510,16 +646,6 @@ button:disabled,
     line-height: 1.3;
 }
 
-.f-card-det * {
-    font-weight: 300;
-}
-
-.f-card-det *:focus,
-.ipt-discount:focus {
-    outline: none;
-    box-shadow: 0 0 1px 1px var(--accent-vivid);
-}
-
 .h4-card-det {
     color: var(--accent-darkest);
     font-weight: 400;
@@ -528,70 +654,33 @@ button:disabled,
 
 .ipt-discount {
     width: 100%;
-    margin-top: 25px;
+    
 }
 
 .warning {
     box-shadow: 0 0 1px 1px var(--warning);
 }
 
-.modal-title + .div-divider {
-    margin: 25px auto 0 auto;
-}
-
 .p-modal {
     color: var(--accent-darkest);
-    margin-top: 25px;
     line-height: 1.4;
 }
 
-.h4-your-order {
+.h4-modal {
     font-size: 28px;
     color: var(--accent-darkest);
     width: 100%;
     text-align: center;
-    margin: 35px 0 10px 0;
 }
 
-.d-ordered-item {
+.div-ordered-item {
     display: flex;
     justify-content: space-between;
     margin-bottom: 15px;
 }
 
-.d-ordered-item + .div-divider {
-    margin-top: 25px;
-}
-
-.d-total {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 25px;
-}
-
-.dv-discount {
+.div-discount {
     position: relative;
-}
-
-.ul-order-history,
-.ul-discounts {
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-    margin: 25px 0 auto 0;
-    padding: 0;
-}
-
-.ul-discounts {
-    text-align: center;
-    font-size: 36px;
-}
-
-.li-order-history {
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
 }
 
 .spn-code {
@@ -611,29 +700,13 @@ button:disabled,
     color: var(--accent-vivid);
     border-radius: var(--int-br-small);
     padding: 5px 10px;
-    /* transform: translateY(-4px); */
 }
 
-/* Temporary styles */
-label {
-    position: absolute;
-    clip: rect(1px, 1px, 1px, 1px);
-    padding: 0;
-    border: 0;
-    height: 1px;
-    width: 1px;
-    overflow: hidden;
-}
-
-button:hover {
-    transform: scale(1.04)
-}
-
-button:active {
-    transform: scale(1.0);
-    
-}
-
-button:disabled {
-    opacity: 0.5;
+.div-star-rating {
+    border: 1px solid var(--accent-light);
+    border-radius: var(--int-br);
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 25px;
 }
