--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@
 body, html {
     padding: 0;
     margin: 0;
+    scrollbar-gutter: stable;
 }
 
 html {
@@ -25,7 +26,7 @@ html {
     --lightest: #fffffe;
     /* Accent colour */
     --accent-darkest: #232946;
-    --accent-vivid: #00FBFF;
+    --accent-vivid: #00f7ff;
     --accent-light: #b8c1ec;
     --accent-lightest: #fffffe;
     /* Border radius options */
